[gd_scene load_steps=4 format=3 uid="uid://w7g5p3p3ldbw"]

[ext_resource type="Script" path="res://Main.gd" id="1_ohpg3"]
[ext_resource type="TileSet" uid="uid://bj4w75hx8d420" path="res://assets/tiles/tile_set.tres" id="1_siuqx"]
[ext_resource type="PackedScene" uid="uid://ch0yf5nkshbib" path="res://src/player/Player.tscn" id="2_cqxvx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ohpg3")

[node name="BgLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="TileMap" type="TileMap" parent="BgLayer"]
position = Vector2(1, 0)
tile_set = ExtResource("1_siuqx")
format = 2
layer_0/name = "BackGround"
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 524288, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, 720896, 65536, 0, 786432, 65536, 0, 851968, 65536, 0, 917504, 65536, 0, 917505, 65536, 0, 917506, 65536, 0, 917507, 65536, 0, 917508, 65536, 0, 917509, 65536, 0, 917510, 65536, 0, 917511, 65536, 0, 917512, 65536, 0, 917513, 65536, 0, 917514, 65536, 0, 917515, 65536, 0, 917516, 65536, 0, 917517, 65536, 0, 917518, 65536, 0, 917519, 65536, 0, 917520, 65536, 0, 917521, 65536, 0, 917522, 65536, 0, 917523, 65536, 0, 917524, 65536, 0, 917525, 65536, 0, 917526, 65536, 0, 917527, 65536, 0, 917528, 65536, 0, 917529, 65536, 0, 917530, 65536, 0, 917531, 65536, 0, 917532, 65536, 0, 917533, 65536, 0, 917534, 65536, 0, 917535, 65536, 0, 917536, 65536, 0, 917537, 65536, 0, 917538, 65536, 0, 917539, 65536, 0, 917540, 65536, 0, 917541, 65536, 0, 917542, 65536, 0, 917543, 65536, 0, 917544, 65536, 0, 917545, 65536, 0, 917546, 65536, 0, 917547, 65536, 0, 917548, 65536, 0, 917549, 65536, 0, 917550, 65536, 0, 917551, 65536, 0, 917552, 65536, 0, 917553, 65536, 0, 917554, 65536, 0, 917555, 65536, 0, 917556, 65536, 0, 18, 65536, 0, 19, 65536, 0, 20, 65536, 0, 21, 65536, 0, 22, 65536, 0, 23, 65536, 0, 24, 65536, 0, 25, 65536, 0, 26, 65536, 0, 27, 65536, 0, 28, 65536, 0, 29, 65536, 0, 30, 65536, 0, 31, 65536, 0, 32, 65536, 0, 33, 65536, 0, 34, 65536, 0, 35, 65536, 0, 36, 65536, 0, 37, 65536, 0, 38, 65536, 0, 39, 65536, 0, 40, 65536, 0, 41, 65536, 0, 42, 65536, 0, 43, 65536, 0, 44, 65536, 0, 45, 65536, 0, 46, 65536, 0, 47, 65536, 0, 48, 65536, 0, 49, 65536, 0, 50, 65536, 0, 51, 65536, 0, 52, 65536, 0, 53, 65536, 0, 54, 65536, 0, 55, 65536, 0, 56, 65536, 0, 57, 65536, 0, 58, 65536, 0, 59, 65536, 0, 60, 65536, 0, 61, 65536, 0, 62, 65536, 0, 63, 65536, 0, 64, 65536, 0, 65, 65536, 0, 66, 65536, 0, 67, 65536, 0, 68, 65536, 0, 69, 65536, 0, 70, 65536, 0, 71, 65536, 0, 72, 65536, 0, 73, 65536, 0, 74, 65536, 0, 75, 65536, 0, 76, 65536, 0, 77, 65536, 0, 917581, 65536, 0, 917580, 65536, 0, 917557, 65536, 0, 917558, 65536, 0, 917559, 65536, 0, 917560, 65536, 0, 917561, 65536, 0, 917562, 65536, 0, 917563, 65536, 0, 917564, 65536, 0, 917565, 65536, 0, 917566, 65536, 0, 917567, 65536, 0, 917568, 65536, 0, 917569, 65536, 0, 917570, 65536, 0, 917571, 65536, 0, 917572, 65536, 0, 917573, 65536, 0, 917574, 65536, 0, 917575, 65536, 0, 917576, 65536, 0, 917577, 65536, 0, 917578, 65536, 0, 917579, 65536, 0, 786434, 262144, 0, 786435, 262144, 0, 786436, 262144, 0, 720902, 262144, 0, 720903, 262144, 0, 720904, 262144, 0, 655370, 262144, 0, 655371, 262144, 0, 655372, 262144, 0, 524296, 262144, 0, 524295, 262144, 0, 524294, 262144, 0, 458756, 262144, 0, 458755, 262144, 0, 458754, 262144, 0, 327686, 262144, 0, 327687, 262144, 0, 327688, 262144, 0, 262154, 262144, 0, 262155, 262144, 0, 262156, 262144, 0, 786447, 65536, 0, 786448, 65536, 0, 786449, 65536, 0, 720916, 65536, 0, 720917, 65536, 0, 589839, 65536, 0, 589840, 65536, 0, 589841, 65536, 0, 524309, 65536, 0, 524310, 65536, 0, 720918, 65536, 0, 524308, 65536, 0, 393233, 65536, 0, 393232, 65536, 0, 393231, 65536, 0, 262164, 65536, 0, 262166, 65536, 0, 262165, 65536, 0, 655362, 262144, 0, 655363, 262144, 0, 655364, 262144, 0, 393226, 262144, 0, 393227, 262144, 0, 393228, 262144, 0, 262148, 262144, 0, 262147, 262144, 0, 262146, 262144, 0, 852002, 65536, 0, 786466, 65536, 0, 720930, 65536, 0, 720931, 65536, 0, 786467, 65536, 0, 852003, 65536, 0, 852004, 65536, 0, 786468, 65536, 0, 720932, 65536, 0, 851999, 720896, 0, 786463, 720896, 0, 720927, 720896, 0, 852007, 720896, 0, 786471, 720896, 0, 720935, 720896, 0, 852018, 65536, 0, 786482, 65536, 0, 720946, 65536, 0, 655410, 786432, 0, 589874, 786432, 0, 524338, 786432, 0, 458802, 786432, 0, 393266, 786432, 0, 393267, 65536, 0, 458803, 65536, 0, 524339, 65536, 0, 589875, 65536, 0, 655411, 65536, 0, 720947, 65536, 0, 786483, 65536, 0, 852019, 65536, 0, 393268, 65536, 0, 458804, 65536, 0, 524340, 65536, 0, 589876, 65536, 0, 655412, 65536, 0, 720948, 65536, 0, 786484, 65536, 0, 852020, 65536, 0, 786479, 262144, 0, 786480, 262144, 0, 786478, 262144, 0, 458816, 786432, 0, 524352, 786432, 0, 589888, 65536, 0, 655424, 65536, 0, 786498, 262144, 0, 458820, 458752, 0, 524356, 65536, 0, 589892, 786432, 0, 655428, 786432, 0, 720964, 65536, 0, 786500, 65536, 0, 852036, 65536, 0, 78, 65536, 0, 79, 65536, 0, 80, 65536, 0, 81, 65536, 0, 82, 65536, 0, 83, 65536, 0, 84, 65536, 0, 85, 65536, 0, 86, 65536, 0, 87, 65536, 0, 88, 65536, 0, 89, 65536, 0, 90, 65536, 0, 91, 65536, 0, 92, 65536, 0, 93, 65536, 0, 94, 65536, 0, 917582, 65536, 0, 917583, 65536, 0, 917584, 65536, 0, 917585, 65536, 0, 917586, 65536, 0, 917587, 65536, 0, 917588, 65536, 0, 917589, 65536, 0, 917590, 65536, 0, 917591, 65536, 0, 917592, 65536, 0, 917593, 65536, 0, 917594, 65536, 0, 917595, 65536, 0, 917596, 65536, 0, 917597, 65536, 0, 917598, 65536, 0, 917599, 65536, 0, 917600, 65536, 0, 95, 65536, 0, 96, 65536, 0, 97, 65536, 0, 98, 65536, 0, 917601, 65536, 0, 917602, 65536, 0, 99, 65536, 0, 100, 65536, 0, 101, 65536, 0, 102, 65536, 0, 103, 65536, 0, 104, 65536, 0, 105, 65536, 0, 106, 65536, 0, 107, 65536, 0, 108, 65536, 0, 109, 65536, 0, 110, 65536, 0, 111, 65536, 0, 112, 65536, 0, 113, 65536, 0, 114, 65536, 0, 115, 65536, 0, 116, 65536, 0, 117, 65536, 0, 118, 65536, 0, 119, 65536, 0, 120, 65536, 0, 917603, 65536, 0, 917604, 65536, 0, 917605, 65536, 0, 917606, 65536, 0, 917607, 65536, 0, 917608, 65536, 0, 917609, 65536, 0, 917610, 65536, 0, 917611, 65536, 0, 917612, 65536, 0, 917613, 65536, 0, 917614, 65536, 0, 917615, 65536, 0, 917616, 65536, 0, 917617, 65536, 0, 917618, 65536, 0, 917619, 65536, 0, 917620, 65536, 0, 917621, 65536, 0, 917622, 65536, 0, 917623, 65536, 0, 917624, 65536, 0, 65656, 65536, 0, 131192, 65536, 0, 196728, 65536, 0, 262264, 65536, 0, 327800, 65536, 0, 393336, 65536, 0, 458872, 65536, 0, 524408, 65536, 0, 589944, 65536, 0, 655480, 65536, 0, 721016, 65536, 0, 786552, 65536, 0, 852088, 65536, 0, 262213, 786432, 0, 262214, 65536, 0, 262215, 65536, 0, 262216, 65536, 0, 327749, 786432, 0, 393285, 786432, 0, 262217, 65536, 0, 458821, 65536, 0, 524357, 65536, 0, 458813, 262144, 0, 458814, 262144, 0, 458815, 262144, 0, 458826, 262144, 0, 458827, 262144, 0, 458828, 262144, 0, 524368, 262144, 0, 524369, 262144, 0, 524370, 262144, 0, 65615, 458752, 0, 131151, 458752, 0, 196687, 458752, 0, 65614, 458752, 0, 131150, 458752, 0, 196686, 458752, 0, 196691, 458752, 0, 262227, 458752, 0, 327763, 458752, 0, 196692, 458752, 0, 262228, 458752, 0, 327764, 458752, 0, 655437, 262144, 0, 655438, 262144, 0, 655439, 262144, 0, 655449, 65536, 0, 655450, 65536, 0, 655451, 65536, 0, 852066, 65536, 0, 786530, 65536, 0, 720994, 65536, 0, 655458, 65536, 0, 589922, 65536, 0, 524386, 65536, 0, 458850, 65536, 0, 393314, 65536, 0, 327778, 65536, 0, 262242, 65536, 0, 262243, 65536, 0, 327779, 65536, 0, 393315, 65536, 0, 458851, 65536, 0, 524387, 65536, 0, 589923, 65536, 0, 655459, 65536, 0, 720995, 65536, 0, 786531, 65536, 0, 852067, 65536, 0, 655448, 65536, 0, 589914, 720896, 0, 524378, 720896, 0, 458842, 720896, 0, 393306, 720896, 0, 327770, 720896, 0, 262234, 720896, 0, 262232, 262144, 0, 262233, 262144, 0, 262235, 262144, 0, 786528, 262144, 0, 786529, 262144, 0, 458836, 458752, 0, 524373, 458752, 0, 524372, 458752, 0, 589908, 458752, 0, 589909, 458752, 0, 458837, 458752, 0, 655447, 65536, 0, 655446, 65536, 0, 196709, 655360, 0, 131173, 655360, 0, 65637, 655360, 0, 65638, 655360, 0, 131174, 655360, 0, 196710, 655360, 0, 262244, 65536, 0, 327780, 65536, 0, 393316, 65536, 0, 458852, 65536, 0, 524388, 65536, 0, 589924, 65536, 0, 655460, 65536, 0, 720996, 65536, 0, 786532, 65536, 0, 852068, 65536, 0, 262245, 65536, 0, 327781, 65536, 0, 393317, 65536, 0, 458853, 65536, 0, 524389, 65536, 0, 589925, 65536, 0, 655461, 65536, 0, 720997, 65536, 0, 786533, 65536, 0, 852069, 65536, 0, 262246, 65536, 0, 327782, 65536, 0, 393318, 65536, 0, 458854, 65536, 0, 524390, 65536, 0, 589926, 65536, 0, 655462, 65536, 0, 720998, 65536, 0, 786534, 65536, 0, 852070, 65536, 0, 262247, 65536, 0, 262248, 65536, 0, 262249, 65536, 0, 262250, 65536, 0, 262251, 65536, 0, 262252, 65536, 0, 262253, 65536, 0, 262254, 65536, 0, 262255, 65536, 0, 262256, 65536, 0, 262257, 65536, 0, 65647, 655360, 0, 131183, 655360, 0, 196719, 655360, 0, 65648, 655360, 0, 131184, 655360, 0, 196720, 655360, 0, 131185, 655360, 0, 196721, 655360, 0, 65649, 655360, 0, 262258, 65536, 0, 327795, 655360, 0, 393331, 655360, 0, 393330, 655360, 0, 327794, 655360, 0, 262259, 65536, 0, 262260, 65536, 0, 393332, 655360, 0, 327796, 655360, 0, 458870, 65536, 0, 458871, 65536, 0, 458869, 65536, 0, 458868, 65536, 0, 458867, 65536, 0, 458866, 65536, 0, 458858, 65536, 0, 458857, 65536, 0, 458856, 65536, 0, 458855, 65536, 0, 655466, 65536, 0, 655467, 65536, 0, 655468, 65536, 0, 655469, 65536, 0, 655470, 65536, 0, 655471, 65536, 0, 655472, 65536, 0, 655473, 65536, 0, 655474, 65536, 0, 655475, 65536, 0, 524402, 65536, 0, 589938, 65536, 0, 786548, 655360, 0, 786549, 655360, 0, 786550, 655360, 0, 786551, 655360, 0, 721011, 65536, 0, 786547, 65536, 0, 721013, 262144, 0, 721014, 262144, 0, 655476, 65536, 0, 721003, 65536, 0, 786539, 655360, 0, 852075, 655360, 0, 721004, 65536, 0, 786540, 655360, 0, 852076, 655360, 0, 721007, 65536, 0, 786543, 655360, 0, 852079, 655360, 0, 721008, 65536, 0, 786544, 655360, 0, 852080, 655360, 0, 458859, 65536, 0, 458860, 65536, 0, 524397, 655360, 0, 589933, 655360, 0, 524398, 655360, 0, 589934, 655360, 0, 458861, 65536, 0, 458862, 65536, 0, 393326, 65536, 0, 327790, 65536, 0, 721002, 65536, 0, 721005, 65536, 0, 721006, 65536, 0, 721009, 65536, 0, 721010, 65536, 0, 524393, 655360, 0, 589929, 655360, 0, 524392, 655360, 0, 589928, 655360, 0, 589939, 393216, 5, 786442, 262144, 0, 786443, 262144, 0, 786444, 262144, 0, 983040, 65536, 0, 1048576, 65536, 0, 1114112, 65536, 0, 1179648, 65536, 0, 1245184, 65536, 0, 1310720, 65536, 0, 1376256, 65536, 0, 1441792, 65536, 0, 1507328, 65536, 0, 1572864, 65536, 0, 1638400, 65536, 0, 1703936, 65536, 0, 1769472, 65536, 0, 1835008, 65536, 0, 1900544, 65536, 0, 1900545, 65536, 0, 1900546, 65536, 0, 1900547, 65536, 0, 1900548, 65536, 0, 1900549, 65536, 0, 1900550, 65536, 0, 1900551, 65536, 0, 1900552, 65536, 0, 1900553, 65536, 0, 1900554, 65536, 0, 1900555, 65536, 0, 1900556, 65536, 0, 1900557, 65536, 0, 1900558, 65536, 0, 1900559, 65536, 0, 1900560, 65536, 0, 1900561, 65536, 0, 1900562, 65536, 0, 1900563, 65536, 0, 1900564, 65536, 0, 1900565, 65536, 0, 1900566, 65536, 0, 1900567, 65536, 0, 1900568, 65536, 0, 1900569, 65536, 0, 1900570, 65536, 0, 1900571, 65536, 0, 1900572, 65536, 0, 1900573, 65536, 0, 1900574, 65536, 0, 1900575, 65536, 0, 1900576, 65536, 0, 1900577, 65536, 0, 1900578, 65536, 0, 1900579, 65536, 0, 1900580, 65536, 0, 1900581, 65536, 0, 1900582, 65536, 0, 1900583, 65536, 0, 1900584, 65536, 0, 1900585, 65536, 0, 1900586, 65536, 0, 1900587, 65536, 0, 1900588, 65536, 0, 1900589, 65536, 0, 1900590, 65536, 0, 1900591, 65536, 0, 1900592, 65536, 0, 1900593, 65536, 0, 1900594, 65536, 0, 1900595, 65536, 0, 1900596, 65536, 0, 1900597, 65536, 0, 1900598, 65536, 0, 1900599, 65536, 0, 1900600, 65536, 0, 1900601, 65536, 0, 1900602, 65536, 0, 1900603, 65536, 0, 1900604, 65536, 0, 1900605, 65536, 0, 1900606, 65536, 0, 1900607, 65536, 0, 1900608, 65536, 0, 1900609, 65536, 0, 1900610, 65536, 0, 1900611, 65536, 0, 1900612, 65536, 0, 1900613, 65536, 0, 1900614, 65536, 0, 1900615, 65536, 0, 1900616, 65536, 0, 1900617, 65536, 0, 1900618, 65536, 0, 1900619, 65536, 0, 1900620, 65536, 0, 1900621, 65536, 0, 1900622, 65536, 0, 1900623, 65536, 0, 1900624, 65536, 0, 1900625, 65536, 0, 1900626, 65536, 0, 1900627, 65536, 0, 1900628, 65536, 0, 1900629, 65536, 0, 1900630, 65536, 0, 1900631, 65536, 0, 1900632, 65536, 0, 1900633, 65536, 0, 1900634, 65536, 0, 1900635, 65536, 0, 1900636, 65536, 0, 1900637, 65536, 0, 1900638, 65536, 0, 1900639, 65536, 0, 1900640, 65536, 0, 1900641, 65536, 0, 1900642, 65536, 0, 1900643, 65536, 0, 1900644, 65536, 0, 1900645, 65536, 0, 1900646, 65536, 0, 1900647, 65536, 0, 1900648, 65536, 0, 1900649, 65536, 0, 1900650, 65536, 0, 1900651, 65536, 0, 1900652, 65536, 0, 1900653, 65536, 0, 1900654, 65536, 0, 1900655, 65536, 0, 1900656, 65536, 0, 1900657, 65536, 0, 1900658, 65536, 0, 1900659, 65536, 0, 1900660, 65536, 0, 1900661, 65536, 0, 1900662, 65536, 0, 1900663, 65536, 0, 983160, 65536, 0, 1048696, 65536, 0, 1114232, 65536, 0, 1179768, 65536, 0, 1245304, 65536, 0, 1310840, 65536, 0, 1376376, 65536, 0, 1441912, 65536, 0, 1507448, 65536, 0, 1572984, 65536, 0, 1638520, 65536, 0, 1704056, 65536, 0, 1769592, 65536, 0, 1835128, 65536, 0, 1900664, 65536, 0, 1835015, 851968, 0, 1769479, 851968, 0, 1835018, 917504, 0, 1769482, 917504, 0, 1703943, 65536, 0, 1638407, 65536, 0, 1572871, 65536, 0, 1572874, 65536, 0, 1638410, 65536, 0, 1703946, 65536, 0, 1441799, 262144, 0, 1441800, 262144, 0, 1441801, 262144, 0, 1441802, 262144, 0, 1769476, 262144, 0, 1638405, 262144, 0, 1638412, 262144, 0, 1769485, 262144, 0, 1507340, 262144, 0, 1507333, 262144, 0, 1638404, 262144, 0, 1769474, 262144, 0, 1769475, 262144, 0, 1638403, 262144, 0, 1507332, 262144, 0, 1507341, 262144, 0, 1638413, 262144, 0, 1638414, 262144, 0, 1769486, 262144, 0, 1769487, 262144, 0, 1376269, 0, 4, 1310733, 983040, 0, 1376270, 0, 4, 1376271, 0, 4, 1310735, 0, 4, 1245199, 0, 4, 1245200, 0, 4, 1179664, 0, 4, 1179665, 0, 4, 1835027, 65536, 0, 1769491, 65536, 0, 1703955, 65536, 0, 1638419, 65536, 0, 1572883, 65536, 0, 1507347, 65536, 0, 1441811, 65536, 0, 1376275, 65536, 0, 1310739, 65536, 0, 1310740, 65536, 0, 1376276, 65536, 0, 1441812, 65536, 0, 1507348, 65536, 0, 1572884, 65536, 0, 1638420, 65536, 0, 1703956, 65536, 0, 1769492, 65536, 0, 1835028, 65536, 0, 1179667, 65536, 0, 1245203, 65536, 0, 1179668, 65536, 0, 1245204, 65536, 0, 1179666, 0, 4, 1179670, 65536, 4, 1179671, 65536, 4, 1179672, 65536, 4, 1769496, 65536, 4, 1769497, 65536, 4, 1769498, 65536, 4, 1638426, 65536, 4, 1638427, 65536, 4, 1638428, 65536, 4, 1507355, 65536, 4, 1507356, 65536, 4, 1507357, 65536, 4, 1376284, 65536, 4, 1376285, 65536, 4, 1376286, 65536, 4, 1245210, 65536, 4, 1245211, 65536, 4, 1245212, 65536, 4, 1376278, 65536, 4, 1376279, 65536, 4, 1376280, 65536, 4, 1572886, 65536, 4, 1572887, 65536, 4, 1572888, 65536, 4)

[node name="MainLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Player" parent="MainLayer" instance=ExtResource("2_cqxvx")]
position = Vector2(1280, 1096)

[node name="ParticleLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
